--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <script src="jquery-mobile/jquery-1.10.2.min.js" type="text/javascript"></script>
 <script src="jquery-mobile/jquery.mobile-1.3.2.min.js" type="text/javascript"></script>
 <script src="jquery-mobile/acciones.js" type="text/javascript"></script>
+<link href="jquery-mobile/theme.min.css" rel="stylesheet" type="text/css"/>
 
 <script src="phonegap.js"></script><!-- necesario*/ -->
 </head>
